--- a/index.html
+++ b/index.html
@@ -9,11 +9,15 @@
 </head>
 <body>
     <header>
-        <span class="header__menu-burguer"></span>
-        <img src="assets/Logo.svg" alt="Logo AluraBooks">
-        <a href="#"><img src="assets/Favoritos.svg" alt="Favorite"></a>
-        <a href="#"><img src="assets/Compras.svg" alt="Shopping"></a>
-        <a href="#"><img src="assets/Usuario.svg" alt="User"></a>
+        <div class="container">
+            <span class="header__menu-burguer container__image"></span>
+            <img src="assets/Logo.svg" alt="Logo AluraBooks" class="container__image">  
+        </div>
+        <div class="container">
+            <a href="#"><img src="assets/Favoritos.svg" alt="Favorite" class="container__image"></a>
+            <a href="#"><img src="assets/Compras.svg" alt="Shopping" class="container__image"></a>
+            <a href="#"><img src="assets/Usuario.svg" alt="User" class="container__image"></a>
+        </div>
     </header>
 </body>
 </html>
