--- a/index.html
+++ b/index.html
@@ -38,7 +38,29 @@
         </div>
 
         <ul class="options no-display">
-            <li class="options__item">Categorias</li>
+            <input type="checkbox" id="options-menu" class="options__button">
+            <label for="options-menu">
+                <li class="options__item">Categorias</li>
+            </label>
+
+            <ul class="list-menu">
+                <li class="list-menu__item">
+                    <a href="#" class="list-menu__link">Programação</a>
+                </li>
+                <li class="list-menu__item">
+                    <a href="#" class="list-menu__link">Front-End</a>
+                </li>
+                <li class="list-menu__item">
+                    <a href="#" class="list-menu__link">Infraestrutura</a>
+                </li>
+                <li class="list-menu__item">    
+                    <a href="#" class="list-menu__link">Business</a>
+                </li>
+                <li class="list-menu__item">
+                    <a href="#" class="list-menu__link">Design & UX</a>
+                </li>
+            </ul>
+
             <li class="options__item"><a href="#" class="option__link">Favoritos</a></li>
             <li class="options__item"><a href="#" class="option__link">Minha Estante</a></li>
         </ul>
@@ -179,8 +201,10 @@
         </ul>
     </section>
     <section class="contacts">
-        <h2 class="contacts__title">Fique por dentro das novidades!</h2>
-        <p class="contacts__text">Atualizações de e-books, novos livros, promoções e outros.</p>
+        <div class="contacts__description">
+            <h2 class="contacts__title">Fique por dentro das novidades!</h2>
+            <p class="contacts__text">Atualizações de e-books, novos livros, promoções e outros.</p>
+        </div>
         <input type="email" placeholder="Cadastre seu e-mail" class="contacts__email">
     </section>
 
