--- a/index.html
+++ b/index.html
@@ -66,9 +66,18 @@
         </ul>
 
         <div class="container">
-            <a href="#"><img src="assets/Favoritos.svg" alt="Favorite" class="container__image container__image-transparent"></a>
-            <a href="#"><img src="assets/Compras.svg" alt="Shopping" class="container__image"></a>
-            <a href="#"><img src="assets/Usuario.svg" alt="User" class="container__image"></a>
+            <a href="#">
+                <img src="assets/Favoritos.svg" alt="Favorite" class="container__image container__image-transparent">
+            </a>
+            <a href="#" class="container__link">
+                <img src="assets/Compras.svg" alt="Shopping" class="container__image">
+                <p class="container__text">Minha sacola</p>
+            </a>
+            <a href="#" class="container__link">
+                <img src="assets/Usuario.svg" alt="User" class="container__image">
+                <p class="container__text">Meu Perfil</p>
+
+            </a>
         </div>
     </header>
     <section class="banner">
@@ -212,6 +221,81 @@
 
     <footer>
         <h2 class="footer__title">Grupo Alura</h2>
+        <ul class="list-footer">
+            <li class="list-footer__title">Educação</li>
+            <li class="list-footer__item">
+                <img src="assets/Caelum.svg" alt="Logo do Caelum">
+                <a href="#" class="list-footer__link">Caelum</a>
+            </li>
+            <li class="list-footer__item">
+                <img src="assets/CasaDoCodigo.svg" alt="Logo da Casa do Código">
+                <a href="#" class="list-footer__link">Casa do Código</a>
+            </li>
+        </ul>
+
+        <ul class="list-footer">
+            <li class="list-footer__title">Educação Online</li>
+            <li class="list-footer__item">
+                <img src="assets/Alura.svg" alt="Logo da Alura">
+                <a href="#" class="list-footer__link">Alura</a>
+            </li>
+            <li class="list-footer__item">
+                <img src="assets/AluraEmpresas.svg" alt="Logo da Alura Para Empresas">
+                <a href="#" class="list-footer__link">Alura Para Empresas</a>
+            </li>
+            <li class="list-footer__item">
+                <img src="assets/AluraLatam.svg" alt="Logo da Alura LATAM">
+                <a href="#" class="list-footer__link">Alura LATAM</a>
+            </li>
+            <li class="list-footer__item">
+                <img src="assets/AluraStart.svg" alt="Logo da Alura Start">
+                <a href="#" class="list-footer__link">Alura Start</a>
+            </li>
+            <li class="list-footer__item">
+                <img src="assets/MusicDot.svg" alt="Logo MusicDot">
+                <a href="#" class="list-footer__link">MusicDot</a>
+            </li>
+            <li class="list-footer__item">
+                <img src="assets/AluraLingua.svg" alt="Logo da Alura Língua">
+                <a href="#" class="list-footer__link">Alura Língua</a>
+            </li>
+            <li class="list-footer__item">
+                <img src="assets/PM3.svg" alt="Logo da PM3">
+                <a href="#" class="list-footer__link">PM3</a>
+            </li>
+        </ul>
+
+        <ul class="list-footer">
+            <li class="list-footer__title">Comunidade</li>
+            <li class="list-footer__item">
+                <img src="assets/HipstersTech.svg" alt="Logo da Hipsters ponto Tech">
+                <a href="#" class="list-footer__link">Hipsters ponto Tech</a>
+            </li>
+            <li class="list-footer__item">
+                <img src="assets/Scuba.svg" alt="Logo da Scuba">
+                <a href="#" class="list-footer__link">Scuba Dev</a>
+            </li>
+            <li class="list-footer__item">
+                <img src="assets/Layers.svg" alt="Logo da Layers">
+                <a href="#" class="list-footer__link">Layers ponto Tech</a>
+            </li>
+            <li class="list-footer__item">
+                <img src="assets/LikeABoss.svg" alt="Logo da Like a Boss">
+                <a href="#" class="list-footer__link">Like a Boss</a>
+            </li>
+            <li class="list-footer__item">
+                <img src="assets/CarreiraSemFronteira.svg" alt="Logo da Carreira sem Fronteira">
+                <a href="#" class="list-footer__link">Carreira sem Fronteira</a>
+            </li>
+            <li class="list-footer__item">
+                <img src="assets/HipstersJobs.svg" alt="Logo da Hipsters ponto Jobs">
+                <a href="#" class="list-footer__link">Hipsters ponto Jobs</a>
+            </li>
+            <li class="list-footer__item">
+                <img src="assets/GUJ.svg" alt="Logo da GUJ">
+                <a href="#" class="list-footer__link">GUJ</a>
+            </li>
+        </ul>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
